--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>20/04/21 22:59:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7a765367]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@212921632</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/21 22:59:17</td>   <td>15149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7a765367]">f</td> 
-  <td>main@212921632</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/21 22:59:31</td>   <td>29277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7a765367]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@212921632</td>   <td></td> </tr>
+<tr bgcolor="d3d1ba">  <td>20/04/23 17:33:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7f010382]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@904861801</td>   <td></td> </tr>
+<tr bgcolor="d3d1ba">  <td>20/04/23 17:33:28</td>   <td>15722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7f010382]">f</td> 
+  <td>main@904861801</td>   <td></td> </tr>
+<tr bgcolor="d3d1ba">  <td>20/04/23 17:34:10</td>   <td>58249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7f010382]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@904861801</td>   <td></td> </tr>
 </table>
