--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\khuong.truong\AppData\Local\Temp\testng-eclipse--1909574199\testng-customsuite.xml</span>
+                    <span>C:\Users\khuong.truong\AppData\Local\Temp\testng-eclipse-53061112\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\khuong.truong\AppData\Local\Temp\testng-eclipse--1909574199\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\khuong.truong\AppData\Local\Temp\testng-eclipse-53061112\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,7 +188,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'f')
 data.setCell(0, 2, 'KarrosTechPJ.Karros.NewTest')
-data.setCell(0, 3, 42523);
+data.setCell(0, 3, 42684);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -226,11 +226,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">f</span>
-                <span class="method-start">15723 ms</span>
+                <span class="method-start">13422 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">58250 ms</span>
+                <span class="method-start">56110 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
