--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">56,897</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">96,091</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">KarrosTechPJ.Karros.NewTest</td><td><a href="#m0">f</a></td><td rowspan="1">1587649973657</td><td rowspan="1">41947</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">KarrosTechPJ.Karros.Filters.TC_Request_Status</td><td><a href="#m0">TO_Request_Status</a></td><td rowspan="1">1587657672537</td><td rowspan="1">3521</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">KarrosTechPJ.Karros.API.TC_PostAPI</td><td><a href="#m1">TO_PostAPI</a></td><td rowspan="1">1587657651711</td><td rowspan="1">7385</td></tr><tr class="passedodd"><td rowspan="1">KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name</td><td><a href="#m2">TO_Sort_First_Name</a></td><td rowspan="1">1587657609121</td><td rowspan="1">41958</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">KarrosTechPJ.Karros.NewTest#f</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">KarrosTechPJ.Karros.Filters.TC_Request_Status#TO_Request_Status</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [3] but found [9]
+	at KarrosTechPJ.Karros.Filters.TC_Request_Status.TO_Request_Status(TC_Request_Status.java:52)
+	at java.util.ArrayList.forEach(ArrayList.java:1249)
+... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">KarrosTechPJ.Karros.API.TC_PostAPI#TO_PostAPI</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name#TO_Sort_First_Name</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
