--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>20/04/23 22:59:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_First_Name.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@17d677df]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/23 23:00:09</td>   <td>29110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_First_Name.TO_Sort_First_Name()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@17d677df]">TO_Sort_First_Name</td> 
-  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/23 23:00:51</td>   <td>71072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_First_Name.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@17d677df]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/23 23:00:51</td>   <td>71700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_PostAPI()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@3043fe0e]">TO_PostAPI</td> 
-  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/23 23:00:59</td>   <td>79087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Request_Status.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@78e67e0a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/23 23:01:12</td>   <td>92525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Request_Status.TO_Request_Status()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@78e67e0a]">TO_Request_Status</td> 
-  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/23 23:01:16</td>   <td>96049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Request_Status.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@78e67e0a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="d3d1ba">  <td>20/04/24 10:13:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_First_Name.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@670002]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@168366</td>   <td></td> </tr>
+<tr bgcolor="d3d1ba">  <td>20/04/24 10:13:22</td>   <td>10091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_First_Name.TO_Sort_First_Name()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@670002]">TO_Sort_First_Name</td> 
+  <td>main@168366</td>   <td></td> </tr>
+<tr bgcolor="d3d1ba">  <td>20/04/24 10:14:03</td>   <td>50836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_First_Name.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@670002]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@168366</td>   <td></td> </tr>
+<tr bgcolor="ca8de8">  <td>20/04/24 10:14:04</td>   <td>51517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_PostAPI()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@1f0f1111]">TO_PostAPI</td> 
+  <td>main@168366</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/04/24 10:14:09</td>   <td>56831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Request_Status.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@49c386c8]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@168366</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/04/24 10:16:29</td>   <td>196452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Request_Status.TO_Request_Status()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@49c386c8]">TO_Request_Status</td> 
+  <td>main@168366</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>20/04/24 10:16:39</td>   <td>206475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Request_Status.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@49c386c8]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@168366</td>   <td></td> </tr>
 </table>
