--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -5,6 +5,7 @@
 <th>Groups</th>
 </tr><tr>
 <td>KarrosTechPJ.Karros.NewTest</td>
+<td>KarrosTechPJ.Karros.API.TC_PostAPI</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,6 +13,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>f</td>
+<td>TO_PostAPI</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
