--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>20/04/23 22:53:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7a765367]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@212921632</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/23 22:53:11</td>   <td>-5791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7a765367]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@212921632</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/23 22:53:11</td>   <td>-5787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:0, instance:KarrosTechPJ.Karros.NewTest@7a765367]">f</td> 
-  <td>main@212921632</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/04/24 01:14:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_PostAPI()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@7a1ebcd8]">TO_PostAPI</td> 
+  <td>main@2092769598</td>   <td></td> </tr>
 </table>
