--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>20/04/26 01:59:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_007()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@7a765367]">TO_API_007</td> 
+<tr bgcolor="7fba77">  <td>20/04/26 09:37:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Request_Status.TO_Request_Status()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@7a765367]">TO_Request_Status</td> 
   <td>main@212921632</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/26 01:59:25</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@7a765367]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="7fba77">  <td>20/04/26 09:37:06</td>   <td>5877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Request_Status.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@7a765367]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@212921632</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>20/04/26 09:36:44</td>   <td>-16464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Request_Status.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@7a765367]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@212921632</td>   <td></td> </tr>
 </table>
