--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_001()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">TO_API_001</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_001()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_001</td> 
   <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:37</td>   <td>5287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_002()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">TO_API_002</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:45</td>   <td>5112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_002()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_002</td> 
   <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:39</td>   <td>7181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_003()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">TO_API_003</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:47</td>   <td>7357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_003()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_003</td> 
   <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:47</td>   <td>14498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_004()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">TO_API_004</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:56</td>   <td>15595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_004()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_004</td> 
   <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:50</td>   <td>17409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_005()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">TO_API_005</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:58</td>   <td>18242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_005()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_005</td> 
   <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:51</td>   <td>19235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_006()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">TO_API_006</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:15:00</td>   <td>20343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PostAPI.TO_API_006()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">TO_API_006</td> 
   <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 02:07:33</td>   <td>60498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Request_Status.TO_Request_Status()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@80503]">TO_Request_Status</td> 
+<tr bgcolor="85d8b6">  <td>20/04/26 10:14:34</td>   <td>-6167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Request_Status.TO_Request_Status()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2f943d71]">TO_Request_Status</td> 
   <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/26 02:05:45</td>   <td>-47409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_First_Name.TO_Sort_First_Name()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">TO_Sort_First_Name</td> 
+<tr bgcolor="7fba77">  <td>20/04/26 10:13:32</td>   <td>-67947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_First_Name.TO_Sort_First_Name()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">TO_Sort_First_Name</td> 
   <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/26 02:06:32</td>   <td>-667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_First_Name.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="7fba77">  <td>20/04/26 10:14:19</td>   <td>-21065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_First_Name.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 02:07:38</td>   <td>66201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Request_Status.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@80503]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="85d8b6">  <td>20/04/26 10:14:39</td>   <td>-625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Request_Status.afterMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2f943d71]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>20/04/26 02:05:23</td>   <td>-68759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_First_Name.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="7fba77">  <td>20/04/26 10:13:17</td>   <td>-82831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_First_Name.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.RequestAccess.TC_Sort_First_Name@bd8db5a]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:32</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="85d8b6">  <td>20/04/26 10:14:20</td>   <td>-20425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Request_Status.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@2f943d71]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:37</td>   <td>5287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:39</td>   <td>7181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:45</td>   <td>5112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:47</td>   <td>14498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:47</td>   <td>7357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:50</td>   <td>17409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:56</td>   <td>15595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>20/04/26 02:06:51</td>   <td>19235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@2f943d71]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:14:58</td>   <td>18242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/04/26 02:07:18</td>   <td>45949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Request_Status.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.Filters.TC_Request_Status@80503]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="78a366">  <td>20/04/26 10:15:00</td>   <td>20343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_PostAPI.beforeMethod()[pri:0, instance:KarrosTechPJ.Karros.API.TC_PostAPI@80503]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
 </table>
